<resources>
    <string name="app_name">Juego</string>
    <string name="btnAvetura">Aventura</string>
    <string name="btnMultijugador">Multijugador</string>
    <string name="btnSalir">Salir</string>
    <string name="txtJuego">Juego</string>
    <string name="btnTerminarTurno">Terminar Turno</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnAtras1">Atras</string>
    <string name="Configuracion">Configuracion</string>
    <string name="txtselector">Mundos</string>
    <string name="txtTuto">Tutorial</string>
    <string name="btnVS">VS</string>
    //configuracion
    <string name="txtconfiguracion">Configuración</string>
    <string name="txtmusica">Música</string>
    <string name="txtvolumen">Volumen</string>
    <string name="txtBorrar">Borrar datos</string>
    //pantalla 2
    <string name="txtMenuseleccion">Menu principal</string>
    <string name="btnonline">ORDENADOR</string>
    <string name="btnLocal">Local</string>
    <string name="btnOnline">En linea</string>
    <string name="btnAtras">ATRAS</string>
    //mundo 1
    <string name="txtTituloEgipto">Antiguo Egipto</string>

</resources>